objects/ASI_HK_CRM_Promotion_Detail__c.object
<CustomObject>
    <description>ASI HK CRM - Promotion Detail</description>
    <fields>
        <fullName>ASI_CRM_ActualConsumption_9L__c</fullName>
        <label>Actual Consumption (9L)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_ActualConsumption_9L__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Consumption_Value__c</fullName>
        <label>Actual Consumption Value</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Consumption_Value__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Cash__c</fullName>
        <label>Actual Incentive Value (Cash)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Value_Cash__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_FOC__c</fullName>
        <label>Actual Incentive Value (FOC)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Value_FOC__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_OIK__c</fullName>
        <label>Actual Incentive Value (Other in Kind)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Value_OIK__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value_Voucher__c</fullName>
        <label>Actual Incentive Value (Voucher)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Value_Voucher__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Value__c</fullName>
        <label>Actual Incentive Value</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Value__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Incentive_Volume_9L__c</fullName>
        <label>Actual Incentive Volume (9L)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Actual_Incentive_Volume_9L__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_9L__c</fullName>
        <formula>( ASI_CRM_Carry_Over_Promotional_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Promotional__c +
ASI_CRM_Carry_Over_Additional_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Additional__c
) / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carry Over (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_Additional_Bottle__c</fullName>
        <label>Carry Over (Additional Bottle)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Carry_Over_Additional_Bottle__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_Promotional_Bottle__c</fullName>
        <label>Carry Over (Promotional Bottle)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Carry_Over_Promotional_Bottle__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Cash__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Incentive_per_Bottle_Cash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_FOC__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Incentive_per_Bottle_FOC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (FOC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Other_in_Kind__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Incentive_per_Bottle_OtherInKind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Other in Kind)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value_Voucher__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Incentive_per_Bottle_Voucher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value (Voucher)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Value__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c *  ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Incentive_Value_per_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Volume_9L__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ( 
 ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Trade_Deal_Bottle_Qty__c +
 ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Additional_SKU_Bottle_Qty__c * ( 
 ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Additional__c  / 
ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Promotional__c)
) / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Volume (9L)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IssuedConsumption_9L__c</fullName>
        <label>Issued Consumption (9L)</label>
        <summarizedField>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_IssuedConsumption_9L__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Promotion_Detail_Achievement__c.ASI_CRM_Promotion_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Avg_ActualConsumption_9L__c</fullName>
        <formula>ASI_CRM_ActualConsumption_9L__c / ASI_HK_CRM_Promotion__r.ASI_CRM_Promotion_Plan__r.ASI_CRM_Promotion_Period_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Avg Actual Consumption (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Avg_Target_Volume_9L__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Promotional__c / 900 / ASI_HK_CRM_Promotion__r.ASI_CRM_Promotion_Plan__r.ASI_CRM_Promotion_Period_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Avg Target Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_P12M_Avg_Consumption_9L__c</fullName>
        <label>P12M Avg Consumption (9L)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Mechanic</label>
        <referenceTo>ASI_CRM_Promotion_Mechanic__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Promotion Details (Sub-brand)</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Less_Than_P12M_Avg__c</fullName>
        <formula>ASI_CRM_Monthly_Avg_Target_Volume_9L__c &lt; ASI_CRM_P12M_Avg_Consumption_9L__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Less Than P12M Avg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Qty_Bottle__c</fullName>
        <label>Target Qty (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Value__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c * ASI_CRM_Promotion_Mechanic__r.ASI_CRM_RTM_WS_Price_Bottle_Promotional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_9L__c</fullName>
        <formula>ASI_CRM_Target_Qty_Bottle__c *  ASI_CRM_Promotion_Mechanic__r.ASI_CRM_Bottle_Size_Promotional__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wholesaler / Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>ASI_HK_CRM_Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_End_Date__c</fullName>
        <formula>ASI_HK_CRM_Promotion__r.ASI_HK_CRM_Promotion_End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_Name__c</fullName>
        <formula>ASI_HK_CRM_Promotion__r.ASI_HK_CRM_Promotion_Name__c</formula>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion_Record_Type__c</fullName>
        <formula>ASI_HK_CRM_Promotion__r.RecordType.Name</formula>
        <label>Promotion Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Promotion__c</fullName>
        <label>Promotion Code</label>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>ASI_HK_CRM_Promotion_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Start_Date__c</fullName>
        <formula>ASI_HK_CRM_Promotion__r.ASI_HK_CRM_Promotion_Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Status__c</fullName>
        <formula>ASI_HK_CRM_Promotion__r.ASI_HK_CRM_Status__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_HK_CRM_Sub_brand</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>ASI_HK_CRM_Promotion_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Target__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; &amp; IF( $RecordType.DeveloperName == &apos;ASI_HK_CRM_Sub_Brand&apos;, ASI_HK_CRM_Sub_Brand__c, ASI_HK_CRM_Account__c )
, IF( $RecordType.DeveloperName == &apos;ASI_HK_CRM_Sub_Brand&apos;, ASI_HK_CRM_Sub_Brand__r.Name , ASI_HK_CRM_Account__r.Name ))</formula>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_HK_CRM_Sub_Brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <label>Promotion Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Promotion Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Customer</fullName>
        <active>true</active>
        <label>ASI CRM SG Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Sub_brand</fullName>
        <active>true</active>
        <label>ASI CRM SG Sub-brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Outlet</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Sub_Brand</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Sub-Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Account</fullName>
        <active>true</active>
        <description>Assign wholesaler or outlet to the promotion</description>
        <label>Wholesaler / Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Sub_Brand</fullName>
        <active>true</active>
        <description>Assign a brand to the promotion</description>
        <label>Sub-Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Outlet</fullName>
        <active>true</active>
        <label>ASI TH CRM Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Sub_Brand</fullName>
        <active>true</active>
        <label>ASI TH CRM Sub-Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>